--- a/index.html
+++ b/index.html
@@ -178,9 +178,11 @@
         <!-- Skills section -->
         <section id="skills" class="section">
             <div class="container text-center">
-                <h2 class="subtitle sub-secundario">Certificados</h2>
+                <h2 class="subtitle sub-secundario">
+                    Certificados
+                </h2>
                 <p class="mb-5 pb-4 certificates-description">
-                    Certificados que obtive refletem meu compromisso com a excelência profissional.
+                    Os certificados que obtive refletem meu compromisso com a excelência profissional.
                     Estou sempre em busca de novos conhecimentos e habilidades para oferecer o melhor serviço possível.
                 </p>
 
@@ -192,7 +194,10 @@
                                     <div class="card-icon">
                                         <i class="fab fa-js" aria-hidden="true"></i>
                                     </div>
-                                    <h5 class="card-title-icon">JavaScript</h5>
+                                    <h5 class="card-title-icon">
+                                        <i class="fas fa-check-circle text-success me-1" style="font-size: 0.9rem;"></i>
+                                        JavaScript
+                                    </h5>
                                     <p class="card-course-name">Curso de JavaScript - 40 Horas</p>
                                 </div>
                             </div>
@@ -207,7 +212,10 @@
                                     <div class="card-icon">
                                         <i class="fab fa-react" aria-hidden="true"></i>
                                     </div>
-                                    <h5 class="card-title-icon">React.js</h5>
+                                    <h5 class="card-title-icon">
+                                        <i class="fas fa-check-circle text-success me-1" style="font-size: 0.9rem;"></i>
+                                        React.js
+                                    </h5>
                                     <p class="card-course-name">React: Desenvolvendo com JavaScript</p>
                                 </div>
                             </div>
@@ -222,7 +230,10 @@
                                     <div class="card-icon">
                                         <i class="fab fa-node" aria-hidden="true"></i>
                                     </div>
-                                    <h5 class="card-title-icon">Node.js</h5>
+                                    <h5 class="card-title-icon">
+                                        <i class="fas fa-check-circle text-success me-1" style="font-size: 0.9rem;"></i>
+                                        Node.js
+                                    </h5>
                                     <p class="card-course-name">Node.js: Criando APIs REST</p>
                                 </div>
                             </div>
@@ -237,7 +248,10 @@
                                     <div class="card-icon">
                                         <i class="fab fa-html5" aria-hidden="true"></i>
                                     </div>
-                                    <h5 class="card-title-icon">HTML5</h5>
+                                    <h5 class="card-title-icon">
+                                        <i class="fas fa-check-circle text-success me-1" style="font-size: 0.9rem;"></i>
+                                        HTML5
+                                    </h5>
                                     <p class="card-course-name">HTML5 e CSS3: Criando páginas web</p>
                                 </div>
                             </div>
@@ -252,7 +266,10 @@
                                     <div class="card-icon">
                                         <i class="fab fa-css3-alt" aria-hidden="true"></i>
                                     </div>
-                                    <h5 class="card-title-icon">CSS3</h5>
+                                    <h5 class="card-title-icon">
+                                        <i class="fas fa-check-circle text-success me-1" style="font-size: 0.9rem;"></i>
+                                        CSS3
+                                    </h5>
                                     <p class="card-course-name">CSS3: Estilizando páginas web</p>
                                 </div>
                             </div>
@@ -267,7 +284,10 @@
                                     <div class="card-icon">
                                         <i class="fab fa-square-js" aria-hidden="true"></i>
                                     </div>
-                                    <h5 class="card-title-icon">Lógica de Programação</h5>
+                                    <h5 class="card-title-icon">
+                                        <i class="fas fa-check-circle text-success me-1" style="font-size: 0.9rem;"></i>
+                                        Lógica de Programação
+                                    </h5>
                                     <p class="card-course-name">Lógica de Programação: Primeiros passos</p>
                                 </div>
                             </div>
@@ -282,7 +302,10 @@
                                     <div class="card-icon">
                                         <i class="fab fa-git-alt" aria-hidden="true"></i>
                                     </div>
-                                    <h5 class="card-title-icon">Git</h5>
+                                    <h5 class="card-title-icon">
+                                        <i class="fas fa-check-circle text-success me-1" style="font-size: 0.9rem;"></i>
+                                        Git
+                                    </h5>
                                     <p class="card-course-name">Git e GitHub: Controle e compartilhe seu código</p>
                                 </div>
                             </div>
@@ -297,7 +320,10 @@
                                     <div class="card-icon">
                                         <i class="fab fa-bootstrap" aria-hidden="true"></i>
                                     </div>
-                                    <h5 class="card-title-icon">Bootstrap</h5>
+                                    <h5 class="card-title-icon">
+                                        <i class="fas fa-check-circle text-success me-1" style="font-size: 0.9rem;"></i>
+                                        Bootstrap
+                                    </h5>
                                     <p class="card-course-name">Bootstrap: Criando páginas responsivas</p>
                                 </div>
                             </div>
@@ -315,7 +341,7 @@
                     Portfólio
                 </h2>
                 <p class="mb-5 pb-4">
-                    Explore os projetos que desenvolvi e colaborei no meu GitHub. Veja as soluções e
+                    Explore os projetos que desenvolvi e nos quais colaborei no meu GitHub. Veja as soluções e
                     inovações que implementei e descubra como elas podem agregar valor às suas necessidades.
                 </p>
 
@@ -440,7 +466,7 @@
                 <p class="mb-5 pb-4 contact-description">
                     Vamos conversar! Tem alguma ideia ou pergunta?
                     Preencha o formulário ou
-                    envie um e-mail, estou à disposição!
+                    envie um e-mail. Estou à disposição!
                 </p>
 
                 <div class="contact text-left">
