--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                         <h6 class="subtitle">Olá, Eu sou</h6>
                         <h1 class="title">Brenno Alencar</h1>
                         <div class="marquee-container">
-                            <p id="marquee-text" class="header-title-dois">Full Stack Developer</p>
+                            <p id="marquee-text" class="header-title-dois"></p>
                         </div>
                         
                         <p class="header-description mt-3">
@@ -570,7 +570,3 @@
     <script src="assets/js/custom-animations.js"></script>
     <!-- steller js -->
     <script src="assets/js/steller.js"></script>
-
-</body>
-
-</html>
