--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                         <h6 class="subtitle">Olá, Eu sou</h6>
                         <h1 class="title">Brenno Alencar</h1>
                         <div class="marquee-container">
-                            <p id="marquee-text" class="header-title-dois"></p>
+                            <p id="marquee-text" class="header-title-dois">Full Stack Developer</p>
                         </div>
                         
                         <p class="header-description mt-3">
@@ -563,6 +563,11 @@
     <script src="assets/vendors/bootstrap/bootstrap.bundle.js"></script>
     <!-- bootstrap 3 affix -->
     <script src="assets/vendors/bootstrap/bootstrap.affix.js"></script>
+    <script src="assets/js/letreiro.js"></script>
+    <script src="assets/js/scroll-direita.js"></script>
+    <script src="assets/js/scroll.js"></script>
+    <script src="assets/js/effect.js"></script>
+    <script src="assets/js/custom-animations.js"></script>
     <script src="assets/js/letreiro.js"></script>
     <script src="assets/js/scroll-direita.js"></script>
     <script src="assets/js/scroll.js"></script>
