--- a/index.html
+++ b/index.html
@@ -347,6 +347,7 @@
 
                 <div class="row">
                     <div class="col-lg-4 col-md-6 mb-4">
+                        <!---<img src="assets/imgs/cart-img.png" alt="Projeto Shopping Cart">     
                         <div class="img-wrapper scroll-effect">
                             <img src="assets/imgs/cart-img.png" alt="Projeto Shopping Cart">
                             <div class="overlay">
@@ -366,6 +367,7 @@
                                 </div>
                             </div>
                         </div>
+                         --->
                     </div>
                     <div class="col-lg-4 col-md-6 mb-4">
                         <div class="img-wrapper scroll-effect">
