--- a/index.html
+++ b/index.html
@@ -347,20 +347,20 @@
 
                 <div class="row">
                     <div class="col-lg-4 col-md-6 mb-4">
-                        <div class="img-wrapper scroll-effect">
-                            <img src="assets/imgs/cart-img.png" alt="Projeto Shopping Cart">
+                         <div class="img-wrapper scroll-effect">
+                            <img src="assets/imgs/teste-2.png" alt="Projeto Animes">
                             <div class="overlay">
                                 <div class="overlay-infos">
-                                    <h5>Shopping Cart</h5>
+                                    <h5>Animes</h5>
                                     <div class="project-tech mb-2">
                                         <span class="tech-tag"><i class="fab fa-react text-info"></i> React</span>
                                         <span class="tech-tag"><i class="fab fa-js-square text-warning"></i>
                                             JavaScript</span>
                                         <span class="tech-tag"><i class="fab fa-css3-alt text-blue"></i> CSS3</span>
                                     </div>
-                                    <p class="project-description">Sistema de carrinho de compras com React</p>
-                                    <a href="https://shopping-cart-main-umber.vercel.app/" target="_blank"
-                                        aria-label="Ver projeto Shopping Cart" class="btn btn-primary btn-sm">
+                                    <p class="project-description">Aplicação para organizar animes favoritos</p>
+                                    <a href="https://organo-two-vert.vercel.app/" target="_blank"
+                                        aria-label="Ver projeto Animes" class="btn btn-primary btn-sm">
                                         <i class="fas fa-external-link-alt me-1"></i>Ver Projeto
                                     </a>
                                 </div>
