--- a/index.html
+++ b/index.html
@@ -410,20 +410,20 @@
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 mb-4">
-                        <div class="img-wrapper scroll-effect">
-                            <img src="assets/imgs/teste-2.png" alt="Projeto Animes">
+                     <div class="img-wrapper scroll-effect">
+                            <img src="assets/imgs/rayal-park-img.png" alt="Projeto Landing Page">
                             <div class="overlay">
                                 <div class="overlay-infos">
-                                    <h5>Animes</h5>
+                                    <h5>Landing Page</h5>
                                     <div class="project-tech mb-2">
-                                        <span class="tech-tag"><i class="fab fa-react text-info"></i> React</span>
-                                        <span class="tech-tag"><i class="fab fa-js-square text-warning"></i>
-                                            JavaScript</span>
+                                        <span class="tech-tag"><i class="fab fa-html5 text-orange"></i> HTML5</span>
                                         <span class="tech-tag"><i class="fab fa-css3-alt text-blue"></i> CSS3</span>
+                                        <span class="tech-tag"><i class="fab fa-bootstrap text-purple"></i>
+                                            Bootstrap</span>
                                     </div>
-                                    <p class="project-description">Aplicação para organizar animes favoritos</p>
-                                    <a href="https://organo-two-vert.vercel.app/" target="_blank"
-                                        aria-label="Ver projeto Animes" class="btn btn-primary btn-sm">
+                                    <p class="project-description">Landing page responsiva e moderna</p>
+                                    <a href="https://rayal-park-main-main.vercel.app/" target="_blank"
+                                        aria-label="Ver projeto Landing Page" class="btn btn-primary btn-sm">
                                         <i class="fas fa-external-link-alt me-1"></i>Ver Projeto
                                     </a>
                                 </div>
