Ajustei o texto do paragrafo

--- a/index.html
+++ b/index.html
@@ -75,9 +75,10 @@
                         <div class="marquee-container">
                             <p id="marquee-text" class="header-title-dois">Full Stack Developer</p>
                         </div>
-                        
+
                         <p class="header-description mt-3">
-                            Apaixonado por tecnologia e programação, sempre em busca de novos desafios e soluções inovadoras.
+                            Apaixonado por tecnologia e programação, sempre em busca de novos desafios e soluções
+                            inovadoras.
                         </p>
 
                         <div class="buttons pt-3">
@@ -129,13 +130,12 @@
                             <p class="subtitle sub-title-zero">Software Developer</p>
 
                             <p class="pl-titles">
-                                Desenvolvedor de Software com 2 anos de experiência em desenvolvimento, especializado na
-                                criação
-                                de soluções web modernas, escaláveis e orientadas à performance. Possuo sólida atuação
-                                com
-                                JavaScript e React.js, além de PHP, sempre aplicando boas práticas de Clean Code,
-                                princípios
-                                SOLID e padrões de projeto para garantir código de alta qualidade e fácil manutenção.
+                                Desenvolvedor Front-end com mais de 2 anos de experiência em desenvolvimento web,
+                                especializado em JavaScript, React.js. Tenho experiência na criação de soluções
+                                modernas, escaláveis e orientadas à performance, com foco em interfaces
+                                responsivas e fáceis de usar. Projeto e implemento aplicações funcionais, seguras
+                                e organizadas, sempre buscando entregar qualidade e atender às necessidades do
+                                usuário.
                             </p>
 
                             <p class="pl-titles">
@@ -152,7 +152,8 @@
                                 <div class="d-flex flex-wrap gap-2">
                                     <span class="skill-badge"><i class="fab fa-js-square text-warning"></i>
                                         JavaScript</span>
-                                    <span class="skill-badge"><i class="fab fa-js-square text-info"></i> TypeScript</span>
+                                    <span class="skill-badge"><i class="fab fa-js-square text-info"></i>
+                                        TypeScript</span>
                                     <span class="skill-badge"><i class="fab fa-react text-info"></i> React.js</span>
                                     <span class="skill-badge"><i class="fab fa-php text-primary"></i> PHP</span>
                                     <span class="skill-badge"><i class="fab fa-node text-success"></i> Node.js</span>
@@ -347,7 +348,7 @@
 
                 <div class="row">
                     <div class="col-lg-4 col-md-6 mb-4">
-                         <div class="img-wrapper scroll-effect">
+                        <div class="img-wrapper scroll-effect">
                             <img src="assets/imgs/teste-2.png" alt="Projeto Animes">
                             <div class="overlay">
                                 <div class="overlay-infos">
@@ -410,7 +411,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 mb-4">
-                    <div class="img-wrapper scroll-effect">
+                        <div class="img-wrapper scroll-effect">
                             <img src="assets/imgs/landing.png" alt="Projeto Landing Page Corporativa">
                             <div class="overlay">
                                 <div class="overlay-infos">
@@ -432,7 +433,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 mb-4">
-                    
+
                     </div>
                 </div>
             </div>
@@ -540,15 +541,15 @@
     </footer>
     <!-- End of page footer -->
 
-<!-- core  -->
-<script src="assets/vendors/jquery/jquery-3.4.1.js"></script>
-<script src="assets/vendors/bootstrap/bootstrap.bundle.js"></script>
-<!-- bootstrap 3 affix -->
-<script src="assets/vendors/bootstrap/bootstrap.affix.js"></script>
-<script src="assets/js/letreiro.js"></script>
-<script src="assets/js/scroll-direita.js"></script>
-<script src="assets/js/scroll.js"></script>
-<script src="assets/js/effect.js"></script>
-<script src="assets/js/custom-animations.js"></script>
-<!-- steller js -->
-<script src="assets/js/steller.js"></script>
+    <!-- core  -->
+    <script src="assets/vendors/jquery/jquery-3.4.1.js"></script>
+    <script src="assets/vendors/bootstrap/bootstrap.bundle.js"></script>
+    <!-- bootstrap 3 affix -->
+    <script src="assets/vendors/bootstrap/bootstrap.affix.js"></script>
+    <script src="assets/js/letreiro.js"></script>
+    <script src="assets/js/scroll-direita.js"></script>
+    <script src="assets/js/scroll.js"></script>
+    <script src="assets/js/effect.js"></script>
+    <script src="assets/js/custom-animations.js"></script>
+    <!-- steller js -->
+    <script src="assets/js/steller.js"></script>
