--- a/index.html
+++ b/index.html
@@ -183,8 +183,7 @@
                     Certificados
                 </h2>
                 <p class="mb-5 pb-4 certificates-description">
-                    Os certificados que obtive refletem meu compromisso com a excelência profissional.
-                    Estou sempre em busca de novos conhecimentos e habilidades para oferecer o melhor serviço possível.
+                    Meus certificados refletem meu compromisso com o aprendizado contínuo e a excelência profissional.
                 </p>
 
                 <div class="row scroll-effect">
@@ -342,8 +341,7 @@
                     Portfólio
                 </h2>
                 <p class="mb-5 pb-4">
-                    Explore os projetos que desenvolvi e nos quais colaborei no meu GitHub. Veja as soluções e
-                    inovações que implementei e descubra como elas podem agregar valor às suas necessidades.
+                    Projetos desenvolvidos e colaborativos disponíveis no meu GitHub, com soluções práticas e inovadoras.
                 </p>
 
                 <div class="row">
