--- a/index.html
+++ b/index.html
@@ -551,3 +551,5 @@
     <script src="assets/js/custom-animations.js"></script>
     <!-- steller js -->
     <script src="assets/js/steller.js"></script>
+
+    </html>
