--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
                                 <textarea id="message" name="message" cols="30" rows="5" class="form-control"
                                     placeholder="Sua mensagem" required></textarea>
                             </div>
-                            <button type="submit" class="btn btn-primary btn-block rounded">
+                            <button type="submit" class="btn btn-primary btn-block">
                                 <i class="fas fa-paper-plane me-2"></i>Enviar mensagem
                             </button>
                         </form>
